Second commit with CostForm

--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,9 +1,5 @@
-/* 
- * Purpose:
- * Assign height: "100%" to
- * html, body, #___gatsby &  
- * div with role="group"
-*/
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -17,4 +13,15 @@ html, body, #___gatsby {
 
 div[role="group"][tabindex] {
     height: 100%;
+}
+
+.page-container{
+    width: 80%;
+    margin: auto;
+}
+
+@media screen and (max-width: 960px) {
+    .page-container{
+        width: 100%;
+    }
 }
