--- a/src/components/styles/HeroSection.css
+++ b/src/components/styles/HeroSection.css
@@ -11,13 +11,12 @@
 
 .hero-image{
     width: 550px;
-    height: 500px;
+    height: 309px;
     margin: auto;
-    border-radius: 21% 79% 74% 26% / 50% 50% 50% 50%;
-    overflow: hidden;
 }
 .hero-image > img {
-    height: 500px;
+    width: 100%;
+    height: 309px;
     -webkit-transform: scale(1) rotate(0);
 	-moz-transform: scale(1) rotate(0);
 	-o-transform: scale(1) rotate(0); /* can stack animations */
@@ -32,6 +31,11 @@
 	-ms-transform: scale(1.1) rotate(5deg);
 	transform: scale(1.1) rotate(5deg);
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+}
+.hero-image > video {
+    display: block;
+    margin: auto;
+    width: 100%;
 }
 .hero-text-container{
     flex-grow: 1;
@@ -53,7 +57,7 @@ font-size: 40px;
 @media screen and (max-width: 1400px) {
     .hero-image, .hero-image >img{
         width: 450px;
-        height: 400px;
+        height: 253px;
     }
     .hero-text > h1 > p {
         font-size: 34px;
@@ -74,7 +78,7 @@ font-size: 40px;
 @media screen and (max-width: 768px) {
     .hero-image, .hero-image >img{
         width: 450px;
-        height: 400px;
+        height: 253px;
     }
 
     .hero-text > h1 > p {
