--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -9,6 +9,9 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
   }
   
   .navbar-container {
