Page main color's theme is CAT

--- a/src/components/styles/Cards.css
+++ b/src/components/styles/Cards.css
@@ -1,6 +1,5 @@
 .cards {
     padding: 4rem;
-    background: #fff;
   }
   
   h1 {
@@ -30,6 +29,7 @@
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
+    background-color: rgb(48, 48, 48);
   }
   
   .cards__item__link {
@@ -93,7 +93,7 @@
   }
   
   .cards__item__text {
-    color: #252e48;
+    color: #ffffff;
     font-size: 18px;
     line-height: 24px;
   }
