--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -7,44 +7,6 @@
     align-items: center;
   }
   
-  .footer-subscription {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  
-    margin-bottom: 24px;
-    padding: 24px;
-    color: #fff;
-  }
-  
-  .footer-subscription > p {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
-  }
-  
-  .footer-subscription-heading {
-    margin-bottom: 24px;
-    font-size: 24px;
-  }
-  
-  .footer-subscription-text {
-    margin-bottom: 24px;
-    font-size: 20px;
-  }
-  
-  .footer-input {
-    padding: 8px 20px;
-    border-radius: 2px;
-    margin-right: 10px;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    margin-bottom: 16px;
-    border: 1px solid #fff;
-  }
-  
   .footer-links {
     width: 100%;
     max-width: 1000px;
@@ -85,20 +47,15 @@
     transition: 0.3s ease-out;
   }
   
-  .footer-email-form h2 {
-    margin-bottom: 2rem;
-  }
-  
-  .footer-input::placeholder {
-    color: #b1b1b1;
-  }
   
   /* Social Icons */
   .social-icon-link {
-    color: #fff;
+    color: rgb(219, 219, 219);
     font-size: 24px;
   }
-  
+  .social-icon-link:hover {
+  color: rgb(255, 255, 255);
+  }
   .social-media {
     max-width: 1000px;
     width: 100%;
@@ -117,14 +74,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 240px;
   }
   
   .social-logo {
     color: #fff;
     justify-self: start;
     margin-left: 20px;
-    cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
     display: flex;
@@ -142,9 +97,6 @@
       padding-top: 2rem;
     }
   
-    .footer-input {
-      width: 100%;
-    }
   
     .btn {
       width: 100%;
