--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -5,13 +5,14 @@
   margin: 0;
   padding: 0;
   font-family: "PT Sans", sans-serif;
+  color: white;
 }
 
 html,
 body,
 #___gatsby {
   height: 100%;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(24,22,16);
 }
 
 div[role="group"][tabindex] {
@@ -21,7 +22,7 @@ div[role="group"][tabindex] {
 .page-container {
   width: 80%;
   margin: 0 auto;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(39,37,31);
 }
 p {
   padding: 20px 20px;
