--- a/src/components/styles/CostForm.css
+++ b/src/components/styles/CostForm.css
@@ -1,24 +1,17 @@
-/* .costform-container{
-
-} */
+h2,select,option,input{
+color: #000;
+}
 label {
   margin:0 10px;
 }
 label > input,select {
 margin-left: 5px;
+color: rgb(0, 0, 0);
 }
 .costform-form{
-  border-top: 3px solid;
-  border-image-slice: 1;
-  border-image: linear-gradient(
-        to left,
-        rgb(26, 23, 23) 10%,
-        rgb(78, 63, 30) 50%,
-        rgb(28, 27, 27) 90%
-    ) 100% 0 0 0/3px 0 0 0 stretch;
   color: #fff;
   display: flex;
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(90deg, rgb(59,57,51) 0%, rgb(49,47,41) 100%);
   width: 100%;
   height: 50px;
   justify-content: center;
@@ -98,6 +91,7 @@ margin-left: 5px;
     color: black;
   }
   .modal-text {
+    color: black;
     margin-top: 10px;
   }
 
