--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
     color: #fff;
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, rgb(59,57,51) 0%, rgb(49,47,41) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -12,6 +12,14 @@
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
     -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
     filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+    border-right: 3px solid;
+  border-image-slice: 1;
+  border-image: linear-gradient(
+        to left,
+        rgb(59,57,51) 10%,
+        rgb(255, 204, 48) 50%,
+        rgb(49,47,41) 90%
+    ) 0 0 100% 0/0 0 3px 0 stretch;
   }
   
   .navbar-container {
@@ -59,7 +67,7 @@
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 3px solid rgb(255, 204, 48);
     transition: all 0.2s ease-out;
   }
   
