--- a/src/components/styles/HeroSection.css
+++ b/src/components/styles/HeroSection.css
@@ -73,8 +73,8 @@ padding: 0;
 
 @media screen and (max-width: 768px) {
     .hero-image, .hero-image >img{
-        width: 100%;
-        height: auto;
+        width: 450px;
+        height: 253px;
     }
 
     .hero-text > h1 > p {
