--- a/src/components/styles/Cards.css
+++ b/src/components/styles/Cards.css
@@ -117,3 +117,11 @@
       margin-bottom: 2rem;
     }
   }
+  @media only screen and (max-width: 768px) {
+    .cards__container {
+      width: 100%;
+    }
+    .cards{
+      padding: 1rem;
+    }
+  }
