--- a/src/components/styles/CostForm.css
+++ b/src/components/styles/CostForm.css
@@ -76,6 +76,10 @@ color: rgb(0, 0, 0);
       border-radius: 10px;
       z-index: 1002;
   }
+
+  .modal-box > h2{
+    color:black;
+  }
   .modal-close {
     color: rgb(94, 94, 94);
     line-height: 50px;
