--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,41 +1,35 @@
-.home-wrapper {
-    margin: 50px 0;
-}
-.cards {
+.home {
     padding: 4rem;
   }
   
-  h1 {
-    text-align: center;
-  }
   
-  .cards__container {
+  .home-container {
     display: flex;
     flex-flow: column;
     align-items: center;
-    max-width: 1120px;
-    width: 90%;
+    max-width: 1400px;
+    width: 100%;
     margin: 0 auto;
   }
   
-  .cards__wrapper {
+  .home-wrapper {
     position: relative;
     margin: 50px 0 45px;
   }
   
-  .cards__items {
+  .home__items {
     margin-bottom: 24px;
   }
   
-  .cards__item {
+  .home__item {
     display: flex;
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
-    background-color: rgb(49,47,41);
+    background-color: rgb(59,57,51);
   }
   
-  .cards__item__link {
+  .home__item__link {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -46,62 +40,28 @@
     overflow: hidden;
     text-decoration: none;
   }
-  
-  .cards__item__pic-wrap {
-    position: relative;
+  .home__item__header{
     width: 100%;
-    padding-top: 67%;
-    overflow: hidden;
+    text-align: center;
+    padding: 20px 30px 30px;
+    background-color: rgb(49,47,41);
   }
   
-  .fade-img {
-    animation-name: fade-img;
-    animation-duration: 2s;
-  }
-  
-  .cards__item__pic-wrap::after {
-    content: attr(data-category);
-    position: absolute;
-    bottom: 0;
-    margin-left: 10px;
-    padding: 6px 8px;
-    max-width: calc((100%) - 60px);
-    font-size: 14px;
-    color: rgb(39,37,31);
-    background-color: rgb(255, 204, 48);
-    font-weight: 700;
-    box-sizing: border-box;
-  }
-  
-  .cards__item__img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    transition: all 0.2s linear;
-  }
-  
-  .cards__item__img:hover {
-    transform: scale(1.1);
-  }
-  
-  .cards__item__info {
+  .home__item__info {
     padding: 20px 30px 30px;
   }
   
-  .cards__item__text {
+  .home__item__text {
     color: #ffffff;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
+    
   }
+  .home-phone-num{
+    color: rgb(255, 184, 28);
+    text-decoration: none;
+}
   
   @media only screen and (min-width: 1200px) {
     .content__blog__container {
@@ -110,13 +70,13 @@
   }
   
   @media only screen and (min-width: 1024px) {
-    .cards__items {
+    .home__items {
       display: flex;
     }
   }
   
   @media only screen and (max-width: 1024px) {
-    .cards__item {
+    .home__item {
       margin-bottom: 2rem;
     }
   }
