Order form updated

--- a/src/components/styles/Order.css
+++ b/src/components/styles/Order.css
@@ -1,16 +1,16 @@
-#order{
-margin: auto;
-    width: 90%;
-    margin: auto;
+#order {
+  margin: auto;
+  width: 90%;
+  margin: auto;
 }
-#order > h1{
-    margin-bottom: 50px;
+#order > h1 {
+  margin-bottom: 50px;
 }
 .order-form {
-    padding: 20px;
-    background-color: rgb(49,47,41);
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
-    filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
-    border-radius: 10px;
+  padding: 20px;
+  background-color: rgb(49, 47, 41);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+  -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+  border-radius: 10px;
 }
