--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,238 +1,235 @@
 .navbar {
-    color: #fff;
-    background: linear-gradient(90deg, rgb(59,57,51) 0%, rgb(49,47,41) 100%);
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
-    filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
-    border-right: 3px solid;
+  color: #fff;
+  background: linear-gradient(90deg, rgb(59, 57, 51) 0%, rgb(49, 47, 41) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+  -webkit-filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.3));
+  border-right: 3px solid;
   border-image-slice: 1;
   border-image: linear-gradient(
-        to left,
-        rgb(59,57,51) 10%,
-        rgb(255, 204, 48) 50%,
-        rgb(49,47,41) 90%
-    ) 0 0 100% 0/0 0 3px 0 stretch;
+      to left,
+      rgb(59, 57, 51) 10%,
+      rgb(255, 204, 48) 50%,
+      rgb(49, 47, 41) 90%
+    )
+    0 0 100% 0/0 0 3px 0 stretch;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  max-width: 1600px;
+}
+
+.navbar-logo {
+  justify-self: start;
+  height: 80px;
+  margin-left: 20px;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+.navbar-logo-image {
+  height: 85%;
+}
+
+.navbar-logo-text {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 1rem;
+}
+.navbar-logo-text > p:first-child {
+  font-size: 2.8rem;
+}
+.navbar-logo-text > p:last-child {
+  font-size: 1.3rem;
+}
+
+.navbar-logo-text > p {
+  margin: 0;
+  padding: 0;
+  line-height: 0.9;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 65vw;
+  justify-content: end;
+  margin-right: 2rem;
+}
+
+.nav-item {
+  height: 80px;
+  cursor: pointer;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+}
+
+.nav-links:hover {
+  border-bottom: 3px solid rgb(255, 204, 48);
+  transition: all 0.2s ease-out;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+.cost-form {
+  display: none;
+}
+.cost-form--Visible {
+  display: flex;
+}
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
   }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    max-width: 1600px;
-  }
-  
   .navbar-logo {
-    justify-self: start;
-    height: 80px;
-    margin-left: 20px;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-  }
-  .navbar-logo-image {
-    height: 85%;
-  }
-
-  .navbar-logo-text {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 1rem;
-  }
-  .navbar-logo-text>p:first-child{
-    font-size:2.8rem;
-  }
-  .navbar-logo-text>p:last-child{
-    font-size:1.3rem;
-  }
-
-  .navbar-logo-text > p{
-    margin: 0;
-    padding: 0;
-    line-height: 0.9;
-  }
-
-  .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 65vw;
-    justify-content: end;
-    margin-right: 2rem;
-  }
-  
-  .nav-item {
-    height: 80px;
-    cursor: pointer;
-  }
-  
-  .nav-links {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
-  }
-  
-  .nav-links:hover {
-    border-bottom: 3px solid rgb(255, 204, 48);
-    transition: all 0.2s ease-out;
-  }
-  
-  .nav-links-mobile {
-    display: none;
-  }
-  
-  .menu-icon {
-    display: none;
-  }
-
-
-  .cost-form {
-    display: none;
-  }
-  .cost-form--Visible {
-    display: flex;
-  }
-  
-  
-  @media screen and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;
-    }
-  .navbar-logo{
     margin-left: 0;
   }
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #242222;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
-  
-    .nav-links {
-      text-align: center;
-      width: 100%;
-      display: table;
-      margin: 0;
-      padding: 0;
-      line-height: 80px;
-    }
-  
-    .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
-      border: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding-left: 10px;
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      height: 100%;
-      width: 80px;
-      top: 0;
-      right: 0;
-      cursor: pointer;
-    }
-
-    .burger-container {
-      width: 30px;
-      height: 15px;
-      position: relative;
-      display: block;
-      margin: -4px auto 0;
-      top: 50%;
-      transform: rotate(0deg);
-      transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    }
-
-    .bar {
-      width: 100%;
-      height: 3px;
-      display: block;
-      position: relative;
-      background: #FFF;
-      transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-      
-    }
-
-    .bar.topBar {
-      transform: translateY(-4px) rotate(0deg);
-    }
-
-    .bar.btmBar {
-      transform: translateY(4px) rotate(0deg);
-    }
-  
-    .menu-opened.burger-container{
-      transform: translateX(-4px) translateY(-4px) rotate(90deg);
-    }
-    .menu-opened.bar {
-      transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-      transition-delay: 0.3s;
-    }
-    .menu-opened.bar.topBar {
-      transform: translateY(2px) rotate(45deg);
-    }
-    .menu-opened.bar.btmBar {
-      transform: translateY(-1px) rotate(-45deg);
-    }
-
-
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
+
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    width: 100%;
+    display: table;
+    margin: 0;
+    padding: 0;
+    line-height: 80px;
+  }
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 10px;
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: 80px;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+  }
+
+  .burger-container {
+    width: 30px;
+    height: 15px;
+    position: relative;
+    display: block;
+    margin: -4px auto 0;
+    top: 50%;
+    transform: rotate(0deg);
+    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  }
+
+  .bar {
+    width: 100%;
+    height: 3px;
+    display: block;
+    position: relative;
+    background: #fff;
+    transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  }
+
+  .bar.topBar {
+    transform: translateY(-4px) rotate(0deg);
+  }
+
+  .bar.btmBar {
+    transform: translateY(4px) rotate(0deg);
+  }
+
+  .menu-opened.burger-container {
+    transform: translateX(-4px) translateY(-4px) rotate(90deg);
+  }
+  .menu-opened.bar {
+    transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transition-delay: 0.3s;
+  }
+  .menu-opened.bar.topBar {
+    transform: translateY(2px) rotate(45deg);
+  }
+  .menu-opened.bar.btmBar {
+    transform: translateY(-1px) rotate(-45deg);
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
+}
