--- a/src/components/styles/Order.css
+++ b/src/components/styles/Order.css
@@ -11,24 +11,103 @@
   align-items: center;
   justify-content: center;
 }
-#order-form{
+
+#order-form {
+  padding: 50px 100px;
+  max-width: 800px;
   width: 100%;
-  max-width: 500px;
-  margin-top: 50px;
 }
-#inputs-container{
+#inputs-container {
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: aqua;
+}
+.input > label > em {
+  color: red;
+  margin-left: 4px;
 }
 
-.input-field{
-  margin-top: 10px;
-  margin-bottom: 50px;
+.input-field {
+  margin-top: 14px;
+  margin-bottom: 28px;
 }
 .input-field > input {
-  width: 50%;
+  display: inline-block;
+  width: 100%;
+  font-size: 14px;
+  line-height: 28px;
+}
+.input-field > small {
+  position: absolute;
+  line-height: 28px;
+  margin-left: 14px;
+}
+#message {
+  display: inline-block;
+  width: 100%;
+  font-size: 14px;
+  line-height: 28px;
+  height: 200px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: black;
+}
+
+.submit-btn {
+  display: block;
+  margin: auto;
+  width: 200px;
+  height: 36px;
+  border-radius: 5px;
+  color: rgb(39, 37, 31);
+  background-color: rgb(255, 204, 48);
+  border: solid 1px transparent;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+.submit-btn:hover {
+  background-color: transparent;
+  color: #fff;
+  border-color: #fff;
+  transition: all 0.1s ease-in-out;
+}
+
+@media only screen and (max-width: 1200px) {
+  #order-form {
+    padding: 50px 50px;
+  }
+  .input-field {
+    margin-top: 14px;
+    margin-bottom: 42px;
+  }
+  .input-field > input {
+    display: block;
+  }
+  #message {
+    display: block;
+  }
+  .input-field > small {
+    margin: 0;
+  }
+  .submit-btn {
+    margin-top: 28px;
+  }
+}
+@media only screen and (max-width: 760px) {
+  #order-form {
+    padding: 50px 20px;
+  }
+  .input-field {
+    margin-top: 14px;
+    margin-bottom: 42px;
+  }
+  .input-field > input {
+    display: block;
+  }
+  .input-field > small {
+    margin: 0;
+  }
+  .submit-btn {
+    margin-top: 28px;
+  }
 }
