--- a/src/components/styles/Order.css
+++ b/src/components/styles/Order.css
@@ -62,6 +62,7 @@
   background-color: rgb(255, 204, 48);
   border: solid 1px transparent;
   font-size: 18px;
+  font-weight: 700;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
 }
