--- a/src/components/styles/HeroSection.css
+++ b/src/components/styles/HeroSection.css
@@ -34,11 +34,17 @@
   margin: auto;
   padding: 40px 20px;
 }
-.hero-text > h1 {
+.hero-text > h2 {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.hero-text > h1 > p {
+.hero-text > h2 > p {
+  font-size: 40px;
+  padding: 0;
+}
+.hero-text > h2 > a {
   font-size: 40px;
   padding: 0;
 }
@@ -52,8 +58,11 @@
   text-shadow: 0px 0px 3px rgb(253, 216, 104);
 }
 @media screen and (max-width: 1400px) {
-  .hero-text > h1 > p {
+  .hero-text > h2 > p {
     font-size: 34px;
+  }
+  .hero-text > h2 > a {
+    font-size: 36px;
   }
   .phone-num {
     font-size: 36px;
@@ -77,8 +86,11 @@
     padding: 20px 10px;
   }
 
-  .hero-text > h1 > p {
+  .hero-text > h2 > p {
     font-size: 30px;
+  }
+  .hero-text > h2 > a {
+    font-size: 32px;
   }
   .phone-num {
     font-size: 32px;
