Footer face logo centered

--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -110,6 +110,9 @@
   .social-media-wrap {
     flex-direction: column;
   }
+  .social-icons {
+    width: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
